# hipmcl

./: CMakeLists.txt
src/CombBLAS/graph500-1.2/generator/: Makefile  cmake_install.cmake
src/CombBLAS/usort/: cmake_install.cmake
src/gspgemm/: gSpGEMM.cpp  meSpGEMM.h
src/gspgemm/0-temp-0/: CMakeLists.txt
src/gspgemm/nsparse/: HashSpGEMM.hpp
src/gspgemm/rmerge/SPMMProject/: CMakeLists.txt
test/NERSC_examples/: eukarya_nersc_perlmutter_cpu.sh  virus_nersc_perlmutter_cpu.sh
test/small_scale_examples/: sevenvertex.sh
